Added the payment scheme module, and modified the dashboard module

--- a/web/css/symfony.css
+++ b/web/css/symfony.css
@@ -17,7 +17,7 @@
     height: 15px;
 }
 #sf_admin_heading h3, .sf_admin_heading h3{
-    color: #985321;
+    color: #C37E4C;
     font-weight: bold;
     font-size: 12px;
     text-transform: uppercase;
