Modifed the logo, course icon and the homepage scrollable elements

--- a/web/css/scrollable-buttons.css
+++ b/web/css/scrollable-buttons.css
@@ -10,6 +10,10 @@
     float:left;
 }
 
+.landing-image img{
+    border-radius: 5px;
+}
+
 .landing-image .items {
     width:20000em;
     position:absolute;
