Have modified the discussion module

--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -6,7 +6,7 @@
 
 .dashboard-row{
     height: 130px;
-    background-color: #F9F9F9;
+    background-color: #FFF;
     position: relative;
     padding: 5px 10px;
     overflow: hidden;
