--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -5,7 +5,7 @@
 }
 
 .dashboard-row{
-    height: 130px;
+    height: 150px;
     background-color: #FFF;
     position: relative;
     padding: 5px 10px;
@@ -25,6 +25,11 @@
 
 #notifications, #my_courses, #my_discussions, #news_items, #announcements{
     padding: 0 0 12px 0 !important;
+    border: 1px solid #DDD;
+}
+
+#my_peers{
+    border: 1px solid #DDD;    
 }
 
 #my_messages{
@@ -33,7 +38,8 @@
     background-image: url("/images/icon_emails.png");
     background-repeat: no-repeat;
     height: 100px !important;
-    width: 465px
+    width: 438px;
+    border: 1px solid #DDD;
 }
 
 #events{
@@ -42,7 +48,8 @@
     background-image: url("/images/icon_events.png");
     background-repeat: no-repeat;
     height: 100px !important;
-    width: 465px
+    width: 438px;
+    border: 1px solid #DDD;
 }
 
 .view-more{
