--- a/web/css/discussion.css
+++ b/web/css/discussion.css
@@ -468,3 +468,19 @@ span.separator{
 #discussion-notice{
     display: none;
 }
+
+.discussion-row{
+    padding: 5px 10px;
+    position: relative;
+    display: block;
+    border-bottom: 1px solid #DDD;
+}
+
+.discussion, .discussion_topic{
+    padding: 10px 10px;
+    position: relative;
+    display: block;
+    clear: both;
+    background-color: #FFF;
+    border-bottom: 1px solid #DDD;
+}
